--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <!-- About Section -->
     <section class="about-section">
         <div class="about-text">
-            <p>Building Spaces for Tomorrow's Future</p>
+            <p style="color: #c59542">Growth is in Building</p>
             <p>Since our inception in 2013, we have been dedicated to creating residential spaces that blend comfort with luxury, tradition with modernity, and dreams with reality. Our portfolio includes a diverse range of projects that cater to an array of needs and preferences, each crafted with meticulous attention to detail and a deep respect for our customers' aspirations.</p>
         </div>
         <div class="achievements">
@@ -213,7 +213,7 @@
 
      <!-- Content Section -->
  <section class="mobile-content">
-    <h2>Building Spaces for Tomorrow's Future</h2>
+    <h2>Growth is in Building</h2>
     <p>
         Since our inception in 2013, we have been dedicated to creating residential spaces that blend comfort with luxury, tradition with modernity, and dreams with reality. Our portfolio includes a diverse range of projects that cater to an array of needs and preferences, each crafted with meticulous attention to detail and a deep respect for our customers' aspirations.
     </p>
